# component-registry

./: .gitreview  CHANGELOG.md  ChangeLog  README  README.md  configure.ac
.github/: CODEOWNERS
.github/workflows/: native-build.yml
config/: cr-deviceprofile_embedded.xml  cr-deviceprofile_pc.xml
cov_docker_script/: component_config.json  configure_options.conf
source/: Makefile.am  cr-deviceprofile.xml  cr-deviceprofile_skysr213.xml  cr-deviceprofile_xle-wnc.xml  cr-ethwan-deviceprofile.xml
source/CCSP_CR/: ccsp_cr_base.c  ccsp_cr_exportDM.c  ccsp_cr_internal_api.h  ccsp_cr_operation.c  ccsp_cr_profile.c  ccsp_cr_session.c  ccsp_cr_utility.c
source/CrSsp/: ssp_cmd.c  ssp_dbus.c  ssp_global.h  ssp_main.c  ssp_rbus.c
source/test/: Makefile.am  gtest_main.cpp
